# matching-engine

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONFIGURATION.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  PROJECT_STRUCTURE.md  README.md  SECURITY.md  cliff.toml  deny.toml  rust-toolchain.toml  rustfmt.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release-please.yml
benches/: matching_benchmark.rs
examples/: basic_usage.rs
src/: lib.rs
src/domain/: config.rs  mod.rs  order.rs  order_book.rs  trade.rs
src/engine/: factory.rs  lmm_priority.rs  matching_engine.rs  mod.rs  price_time.rs  pro_rata.rs  pro_rata_tob_fifo.rs  threshold_pro_rata.rs
src/interfaces/: event_handler.rs  matching_algorithm.rs  mod.rs
src/numeric/: errors.rs  fixed_decimal.rs  mod.rs
src/platform/: mod.rs  numa.rs
src/platform/simd/: avx2.rs  mod.rs  neon.rs  traits.rs
src/simd/: avx2.rs  avx512.rs  detector.rs  mod.rs  neon.rs  price_matcher.rs  scalar.rs
src/utils/: mod.rs  numa_detection.rs
