[package]
name = "matching-engine"
version = "0.1.0"
edition = "2021"
rust-version = "1.93.0"
authors = ["Istvan Papp <istvan.l.papp@gmail.com>"]
description = "High-performance lock-free matching engine with SIMD optimizations"
license = "PolyForm-Noncommercial-1.0.0"
repository = "https://github.com/trpleo/matching-engine"
readme = "README.md"
keywords = ["matching-engine", "orderbook", "trading", "lock-free", "simd"]
categories = ["algorithms", "concurrency"]

[dependencies]
# Concurrency and lock-free data structures
crossbeam = "0.8"
crossbeam-skiplist = "0.1"
parking_lot = "0.12"

# Decimal arithmetic for financial calculations
rust_decimal = "1.40.0"

# UUID generation
uuid = { version = "1.20.0", features = ["v4", "serde"] }

# Date/time handling
chrono = { version = "0.4.43", features = ["serde"] }

# Memory-efficient collections
arrayvec = "0.7"
smallvec = "1.11"

# Serialization (optional, for API integration)
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0.149", optional = true }

# Async runtime (optional, for async integration)
tokio = { version = "1.49.0", features = ["full"], optional = true }

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", optional = true }

# CPU affinity for NUMA optimization (optional, Linux-focused)
core_affinity = { version = "0.8", optional = true }

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }
proptest = "1.9.0"
quickcheck = "1.0"

[features]
default = []
serde = ["dep:serde", "dep:serde_json", "uuid/serde", "chrono/serde"]
async = ["dep:tokio"]
logging = ["dep:tracing-subscriber"]
# AVX-512 support (requires nightly Rust due to unstable intrinsics)
avx512 = []
# NUMA topology detection and CPU affinity (Linux only)
numa = ["dep:core_affinity"]

[[bench]]
name = "matching_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
